# sgfc

./: .clang-tidy  .gitignore  CMakeLists.txt  COPYING  Makefile  README  README.tests
src/: Makefile  all.h  encoding.c  error.c  execute.c  gameinfo.c  load.c  main.c  options.c  parse.c  parse2.c  properties.c  protos.h  save.c  strict.c  util.c
test-files/: README  escaping-output.txt  escaping-result.sgf  escaping.sgf  mixed-encoding-output.txt  mixed-encoding-result.sgf  mixed-encoding.sgf  mixed-encoding.source  reorder-result.sgf  reorder-z-output.txt  reorder-z-result.sgf  reorder.sgf  strict-output.txt  strict-result.sgf  test-output.txt  test-result.sgf  test-roun-output.txt  test-roun-result.sgf  test.sgf
tests/: Makefile  README  check-value.c  delete-node.c  encoding.c  load-properties.c  options.c  other-games.c  parse-text.c  position.c  test-common.h  test-files.c  test-helper.c  test-runner.c  testrunner.c  trigger-errors.c  trigger_errors.c  value-length.c
